--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- Include a tag for independent, self-contained content content -->
       <article>
         <!-- Display image relevant to topic and set the width attribute to 250 -->
-      <img src="images/time-travel-climate-change.jpeg" width="250" alt="Two political leaders sitting around earth talking. One is from an early civilization.">
+        <img src="images/time-travel-climate-change.jpeg" width="250" alt="Two political leaders sitting around earth talking. One is from an early civilization.">
         <!-- Section sub-heading -->
         <h3>Time-Traveling Political Debates</h3>
 
@@ -65,31 +65,30 @@
 
 
       <!-- Include a tag for independent, self-contained content content -->
-
+      <article>
         <!-- Display image relevant to topic and set the width attribute to 250 -->
-
+        <img src="images/ai-romance-experts.jpeg" width="250" alt="Two robots emoting a heart to a man sitting down.">
         <!-- Section sub-heading -->
-        Robot Romance Consultants
+        <h3>Robot Romance Consultants</h3>
         
-        Robots become relationship experts, offering advice on love and dating. From algorithmic matchmaking to AI relationship therapy, we explore the comedic chaos of a world where artificial intelligence takes the lead in matters of the heart.
+        <p>Robots become relationship experts, offering advice on love and dating. From algorithmic matchmaking to AI relationship therapy, we explore the comedic chaos of a world where artificial intelligence takes the lead in matters of the heart.</p>
 
         <!-- Link to existing html page within episodes directory; relevant to topic -->
-        Learn more
-
-
-
+        <a href="episodes/robot-romance-consultants.html">Learn more</a>
+      </article>
 
       <!-- Include a tag for independent, self-contained content content -->
-
+      <article>
         <!-- Display image relevant to topic and set the width attribute to 250 -->
-
+        <img src="images/world-leader-dance-off.jpeg" width="250" alt="Three politicans dancing in front of Ottawa parliament.">
         <!-- Section sub-heading -->
-        World Leaders' Dance-Off
+        <h3>World Leaders' Dance-Off</h3>
 
-        In today's absurd political landscape, world leaders decide to settle international disputes through a dance-off competition. From Putin's unexpected breakdance moves to Merkel's precision twirls, find out who takes home the trophy and who ends up with two left feet in this hilarious episode.
+        <p>In today's absurd political landscape, world leaders decide to settle international disputes through a dance-off competition. From Putin's unexpected breakdance moves to Merkel's precision twirls, find out who takes home the trophy and who ends up with two left feet in this hilarious episode.</p>
 
         <!-- Link to existing html page within episodes directory; relevant to topic -->
-        Learn more
+        <a href="episodes/world-leaders-dance-off.html">Learn more</a>
+      </article>
     </section>
   </main>
 
