Completed robot romance page

--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
 
 
   <!-- Include the tag for footer content -->
-    &copy; Laugh Track News 2024
-
+  <footer> 
+    <small>&copy; Laugh Track News 2024</small>
+  </footer>
 
 </body>
 </html>
