--- a/episodes/time-traveling-political-debates.html
+++ b/episodes/time-traveling-political-debates.html
@@ -13,7 +13,7 @@
     <!-- Display Laugh Track News logo nested in an anchor tag to link to index.html -->
     <a href="../index.html"><img src="../images/laugh-track-news-logo.svg" alt="Laugh Track News logo"></a>
     <!-- Write the markup for a navigation and link items to appropriate pages -->
-    </nav>
+    <nav>
       <ul>
         <!-- About the podcast can use # as a placeholder to keep the user on this page. -->
         <li><a href="#">About the podcast</a></li>
