--- a/episodes/world-leaders-dance-off.html
+++ b/episodes/world-leaders-dance-off.html
@@ -14,7 +14,7 @@
     <a href="../index.html"><img src="../images/laugh-track-news-logo.svg" alt="Laugh Track News logo"></a>
     
     <!-- Write the markup for a navigation and link items to appropriate pages -->
-    </nav>
+    <nav>
       <ul>
         <!-- About the podcast can use # as a placeholder to keep the user on this page. -->
         <li><a href="#">About the podcast</a></li>
